<resources>
    <string name="app_name">QuizAedes</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="retornar_ao_quiz">Retornar ao Quiz</string>
    <string name="logo_do_aplicativo">Logo do Aplicativo</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login_2">Login</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nomeCadastro">Nome</string>
    <string name="e_mailCadastro">E-mail</string>
    <string name="senhaCadastro">Senha</string>
    <string name="confirme_a_senhaCadastro">Confirme a Senha</string>
    <string name="finalizar_cadastro">Criar Minha Conta</string>
    <string name="j_tem_uma_conta_fa_a_login">Já tem uma conta? Faça login</string>
    <string name="iniciar_quiz">Iniciar Quiz</string>
    <string name="ver_conquistas">Ver Conquistas</string>
    <string name="ranking">Ranking</string>
    <string name="perfil_do_usu_rio">Perfil do Usuário</string>
    <string name="configura_es">Configurações</string>
    <string name="nome_do_usu_rio">Nome do Usuário</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="notifica_btn">Notificações</string>
    <string name="privacidade_botaoconfiguracoes">Privacidade</string>
    <string name="sair_btn_config">Sair</string>
    <string name="app_logo">Logo do aplicativo</string>
    <string name="splash_message">Carregando o conhecimento para o quiz...</string>
    <string name="tela_game_over">Game Over</string>
    <string name="sua_pontuacao">Sua Pontuação: 0</string>
    <string name="sair_game_over">Sair</string>
    <string name="reiniciar_game_over">Reiniciar</string>
    <string name="telaExplicativaWellcome">Seja Bem-vindo ao Quiz Aedes!</string>
    <string name="Mensagem1TelaExplicativa">Este é um Serious Game criado para disseminar informações verdadeiras e relevantes sobre o Aedes aegypti e as doenças transmitidas por ele. Divirta-se e aprenda ao mesmo tempo!</string>
    <string name="next">Próximo</string>
    <string name="ganhe_trof_us_e_moedas">Ganhe Troféus e Moedas!</string>
    <string name="SobreTrofeusMoedas">À medida que você ganha o jogo, receberá troféus e moedas. Esses prêmios poderão ser usados para desbloquear novas funcionalidades e melhorar sua experiência no aplicativo!</string>
    <string name="vamos_come_ar">Vamos Começar!</string>
    <string name="botao_como_jogar">Como jogar</string>
    <string name="botaosairtelainicio">Sair</string>
    <string name="sair">Sair</string>
</resources>