<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cadastro.CadastroActivity"
    android:padding="16dp">


    <!-- Campo de Nome -->
    <EditText
        android:id="@+id/etNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nomeCadastro"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/etEmail"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:padding="12dp"/>


    <!--Campo de E-mail-->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/e_mailCadastro"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/etNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/etPassword"
        android:layout_marginBottom="16dp"
        android:padding="12dp"/>

    <!-- Campo de Senha -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/senhaCadastro"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etConfirmPassword"
        android:layout_marginBottom="16dp"
        android:padding="12dp" />

    <!-- Campo de Confirmação de Senha -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirme_a_senhaCadastro"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCadastro"
        android:layout_marginBottom="16dp"
        android:padding="12dp" />

    <!-- Botão para Finalizar Cadastro -->
    <Button
        android:id="@+id/btnCriarConta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_cadastro"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linkVoltarLogin"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp" />

    <!-- Link para Voltar ao Login -->
    <TextView
        android:id="@+id/linkVoltarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j_tem_uma_conta_fa_a_login"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/btnCriarConta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center" />

</androidx.constraintlayout.widget.ConstraintLayout>












